--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit==1.37.1
 streamlit-drawable-canvas==0.9.3
 tensorflow==2.19.0
-keras==2.19.0
+opencv-python==4.10.0.84
 numpy==1.26.4
-opencv-python-headless==4.10.0.84
 pillow==10.4.0
